--- a/config/locales/responders.en.yml
+++ b/config/locales/responders.en.yml
@@ -10,3 +10,6 @@ en:
       destroy:
         notice: '%{resource_name} was successfully destroyed.'
         alert: '%{resource_name} could not be destroyed.'
+    imports:
+      create:
+        notice: '%{resource_name} has successfully imported'
