I have finished search

--- a/config/locales/responders.en.yml
+++ b/config/locales/responders.en.yml
@@ -13,3 +13,6 @@ en:
     imports:
       create:
         notice: '%{resource_name} has successfully imported'
+    searches:
+      create:
+        notice: '%{resource_name} has successfully completed'
