--- a/README.rdoc
+++ b/README.rdoc
@@ -13,4 +13,6 @@
 В качестве внешнего репозитория для тестирования ресурса Import я использовал один из своих
 репозиториев. Поэтому в тестах можно увидеть Имя Rim-777 и  репозиторий "AVO"
 
+На случай если  введены не существующие данные,  обработку тоже не делал
+
 
