--- a/README.rdoc
+++ b/README.rdoc
@@ -2,9 +2,9 @@
 
 Некоторые пояснения:
 Редактирование имени пользователя через Ajax сделал полностью руками, без применения
-библиотеки best_in_place, основная причина, в том, что на странице у одного пользователья может
-быть несколько коммитов, соответствнно при редактировании его имени  в одном коммите, изменения
-должны произойти коммитах этого пользователя.
+библиотеки best_in_place, основная причина в том, что на странице у одного пользователья может
+быть несколько коммитов, соответствнно при редактировании его имени
+в одном коммите, изменения должны произойти во всех коммитах этого пользователя.
 
 Контроллеры для рессурсов, которые не являются моделями, в частности Import и Search
 протестировал в основном по части редиректов и рендеров и сохранения данных в базу.
