--- a/README.rdoc
+++ b/README.rdoc
@@ -10,8 +10,19 @@
 протестировал в основном по части редиректов и рендеров и сохранения данных в базу.
 Помимо этого тотальное тестирование этих ресурсов сделано в Acceptance тестах.
 
+Внес изименения.
+ 1. На Ajax серевер отдает json
+ 2. Переписал поиск, сделдал его как зависимую имплементацию экшена Index (если если в параметрах пришел email,
+ то экшен отдает только его коммиты, если нет, то все). Тем самым оптимизировал запрос в бд для поиска.
+ 3.Добавил валидацию имени пользователя и репозитория. (не делал отдельного модуля для кастомных ошибок, поскольку
+  приложение   тестовое, в реальных проектах конечно предусматриваю полную обработку возможных кастомных ошибок
+  в отдельном моудуле)
+ 4. Оптимизировал запрос импорта в соответстви с лимитами API GitHub.  Перевернул полинтернета, единственным оптимальным
+ способом для этого я счел постраниный импорт. (возожно есть более оптимальный вариант, буду рад, если кто-нибудь покажет)
+ 5. Протестировал импорт на всех уровнях (модель, контроллер, acceptance)
+
 В качестве внешнего репозитория для тестирования ресурса Import я использовал один из своих
-репозиториев. Поэтому в тестах можно увидеть Имя Rim-777 и  репозиторий "AVO"
+репозиториев. Поэтому в тестах можно увидеть Имя Rim-777 и  репозиторий "AskmeHow"
 
 
 
